--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "Dabro-IdeaEngine",
   "version": "1.0.0",
   "description": "General Assembly WDI NYC - Project 3. Darren, Gaby and Aemiro",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "debugger": "DEBUG=*:* npm run dev"
   },
   "repository": {
     "type": "git",
