--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
     "eslint-plugin-react": "^7.3.0"
   },
   "dependencies": {
-    "body-parser": "^1.18.1",
+    "bcrypt-as-promised": "^1.1.0",
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "jsonwebtoken": "^8.0.1",
     "method-override": "^2.3.9",
     "morgan": "^1.8.2",
-    "pg-promise": "^6.8.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0",
+    "pg-promise": "^6.9.0",
     "twit": "^2.2.9"
   }
 }
