--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "jsonwebtoken": "^8.0.1",
