--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "localhost:3000",
   "devDependencies": {
     "eslint": "^4.7.2",
     "eslint-config-airbnb": "^15.1.0",
