--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0"
   },
+  "engines": {
+    "node": "8.5.0",
+    "npm": "5.3.0"
+  },
   "dependencies": {
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.18.2",
