updated package.json to allow for local downloads

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "start": "node server.js",
+    "presetup": "createdb idea_engine_project && psql -f ./db/migrations/migrations09192017.sql && psql -f ./db/seeds/seed.sql",
+    "setup": "npm install && cd ./client/src && npm install",
+    "postsetup": "cd ./client/src && npm run build",
     "debugger": "DEBUG=*:* npm run dev",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
@@ -38,9 +41,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
-    "express-session": "^1.15.5",
     "jsonwebtoken": "^8.0.1",
-    "method-override": "^2.3.9",
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
